<resources>
    <string name="app_name">Offline Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_to_save_your_note">click to save your note</string>
    <string name="delete_string">Delete</string>
    <string name="search_string">Search</string>
    <string name="note_hint_string">Note</string>
    <string name="title_hint_string">Title</string>
    <string name="fab_create_note_desc_string">Click this button to create a new note.</string>
    <string name="unbookmark_string">Tap here to remove this note from your bookmarks</string>
    <string name="bookmarks_string">Bookmarks</string>
    <string name="bookmark_string">Bookmark</string>
    <string name="display_actions_string">Display other actions</string>
    <string name="share_string">Share</string>
    <string name="label_string">Label</string>
    <string name="offline_notes_string">Offline Notes</string>
    <string name="choose_color">Choose color</string>
</resources>