<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

       <androidx.coordinatorlayout.widget.CoordinatorLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@android:color/white"
               tools:context=".ui.home.HomeFragment">

               <com.google.android.material.floatingactionbutton.FloatingActionButton
                   android:id="@+id/fab_save_note"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="300dp"
                   android:layout_marginEnd="8dp"
                   android:layout_marginBottom="8dp"
                   android:clickable="true"
                   android:contentDescription="@string/click_to_save_your_note"
                   android:focusable="true"
                   android:src="@drawable/ic_save"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/edt_note_content" />

               <EditText
                   android:id="@+id/edt_note_title"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="8dp"
                   android:layout_marginTop="24dp"
                   android:layout_marginEnd="8dp"
                   android:ems="10"
                   android:hint="@string/title_hint_string"
                   android:inputType="textPersonName"
                   android:textSize="21sp"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <EditText
                   android:id="@+id/edt_note_content"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="8dp"
                   android:layout_marginTop="16dp"
                   android:layout_marginEnd="8dp"
                   android:autofillHints="text"
                   android:ems="10"
                   android:gravity="start"
                   android:hint="@string/note_hint_string"
                   android:inputType="textMultiLine"
                   android:minLines="3"
                   android:textSize="16sp"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/edt_note_title" />
           </androidx.constraintlayout.widget.ConstraintLayout>

           <ImageButton
               android:id="@+id/triple_dots_action"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="bottom|end"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="4dp"
               android:layout_marginBottom="5dp"
               android:background="@color/white_colour"
               android:contentDescription="@string/display_actions_string"
               android:src="@drawable/add_notes_actions"
           />

       </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>



